# wait-web

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: Lint & Test.yml  Test.yml  code_coverage.yml  deploy.yml  lint_test.yml  pull_request_check.yml
app/: admin.py  translation.py  urls.py
app/forms/: account.py
app/migrations/: 0001_initial.py  0002_carouselitem.py  0002_carouselitem_category_product_productimage.py  0002_carouselitem_category_product_productimage_and_more.py  0003_alter_customuser_managers_remove_customuser_username_and_more.py  0003_productfeature.py  0004_carouselitem_link.py  0005_carouselitem_text_color_and_more.py  0006_alter_productfeature_options.py  0007_alter_carouselitem_image_alter_category_image_and_more.py  0008_auto_20230826_0940.py  0009_carouselitem_image_webp_category_image_webp_and_more.py  0010_carouselitem_image_height_carouselitem_image_width_and_more.py  0011_alter_customuser_managers_customuser_username_and_more.py
app/models/: __init__.py  abstract.py  home.py  product.py  user.py
app/views/: __init__.py  about.py  account.py  home.py  product.py
config/: context_processor.py  settings.py  urls.py
templates/: 404.html  500.html  about.html  base.html  catalog.html  footer.html  header.html  index.html  product.html
tests/: conftest.py  factories.py  test_about.py  test_catalog.py  test_home_page.py  test_index.py  test_product.py
utils/: optimizer.py  text.py
(+34 files in other folders)
