[tool.poetry]
name = "wait-web"
version = "0.1.0"
description = ""
authors = ["roaddust2 <roaddust2@yahoo.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
psycopg2-binary = "2.9.6"
python-dotenv = "1.0.0"
gunicorn = "20.1.0"
pillow = "9.5.0"
django-modeltranslation = "0.18.9"
django-inline-svg = "0.1.1"
dj-database-url = "2.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-django = "^4.5.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"